force-app/main/default/objects/Sperm_Sample__c/Sperm_Sample__c.object-meta.xml
<CustomObject>
    <label>Semen Sample</label>
    <nameField>
        <displayFormat>SPERM-{0000}</displayFormat>
        <label>Sperm Sample Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Semen Samples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>