force-app/main/default/objects/Sperm_Sample__c/fields/Abstinence__c.field-meta.xml
<CustomField>
    <fullName>Abstinence__c</fullName>
    <inlineHelpText>Numeral (days)</inlineHelpText>
    <label>Abstinence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>