force-app/main/default/objects/Sperm_Sample__c/fields/AEST__c.field-meta.xml
<CustomField>
    <fullName>AEST__c</fullName>
    <formula>IF(
    OR(
        (MONTH(TODAY()) = 4  &amp;&amp;  DAY(TODAY()) &gt;= 1 &amp;&amp; DAY(TODAY()) &lt;= 7 &amp;&amp; WEEKDAY(TODAY()) = 1),
        (MONTH(TODAY()) = 10 &amp;&amp; DAY(TODAY()) &gt;= 1 &amp;&amp; DAY(TODAY()) &lt;= 7 &amp;&amp; WEEKDAY(TODAY()) = 1)
    ),
    11,
    IF(
        OR(
            MONTH(TODAY()) &gt; 4 &amp;&amp; MONTH(TODAY()) &lt; 10,
            AND(MONTH(TODAY()) = 4, DAY(TODAY()) &gt; 7 - WEEKDAY(DATE(YEAR(TODAY()), 4, 1))),
            AND(MONTH(TODAY()) = 10, DAY(TODAY()) &lt;= 7 - WEEKDAY(DATE(YEAR(TODAY()), 10, 1)))
        ),
        10,
        11
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>