force-app/main/default/objects/Sperm_Sample__c/fields/Agglutination__c.field-meta.xml
<CustomField>
    <fullName>Agglutination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agglutination</label>
    <type>Checkbox</type>
</CustomField>