force-app/main/default/objects/Sperm_Sample__c/fields/Agglutination_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Agglutination_as_Text__c</fullName>
    <formula>IF( Agglutination__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agglutination as Text</label>
    <type>Text</type>
</CustomField>