force-app/main/default/objects/Sperm_Sample__c/fields/Analysis_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Date_Time__c</fullName>
    <label>Analysis Date Time</label>
    <type>DateTime</type>
</CustomField>