force-app/main/default/objects/Sperm_Sample__c/fields/Analysis_Date_Time_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Date_Time_as_Text__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(Analysis_Date_Time__c))) &amp; &quot;/&quot; &amp; TEXT(MONTH(DATEVALUE(Analysis_Date_Time__c))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(Analysis_Date_Time__c))) &amp; &quot; &quot; &amp; LPAD(TEXT(HOUR(TIMEVALUE(Analysis_Date_Time__c + (1/24 * AEST__c)))), 2, &apos;0&apos;) &amp; &quot;:&quot; &amp; LPAD(TEXT(MINUTE(TIMEVALUE(Analysis_Date_Time__c + (1/24 * AEST__c)))), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analysis Date Time as Text</label>
    <type>Text</type>
</CustomField>