force-app/main/default/objects/Sperm_Sample__c/fields/Analysis_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analysis Scientist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Compass Lab</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Semen_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>