force-app/main/default/objects/Sperm_Sample__c/fields/Analysis_Time__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Time__c</fullName>
    <label>Analysis Time</label>
    <type>Time</type>
</CustomField>