force-app/main/default/objects/Sperm_Sample__c/fields/Analyst_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Scientist__c</fullName>
    <label>Analyst Scientist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCT</fullName>
            </value>
            <value>
                <fullName>VLA</fullName>
            </value>
            <value>
                <fullName>MWY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>