force-app/main/default/objects/Sperm_Sample__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>Donor_Owner__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>