force-app/main/default/objects/Sperm_Sample__c/fields/CF_NATA_Accreditation_Number__c.field-meta.xml
<CustomField>
    <fullName>CF_NATA_Accreditation_Number__c</fullName>
    <formula>&quot;39479&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CF NATA  Accreditation Number</label>
    <type>Text</type>
</CustomField>