force-app/main/default/objects/Sperm_Sample__c/fields/Collection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date_Time__c</fullName>
    <label>Collection Date Time</label>
    <type>DateTime</type>
</CustomField>