force-app/main/default/objects/Sperm_Sample__c/fields/Collection_Time__c.field-meta.xml
<CustomField>
    <fullName>Collection_Time__c</fullName>
    <label>Collection Time</label>
    <type>Time</type>
</CustomField>