force-app/main/default/objects/Sperm_Sample__c/fields/Compass_Fertility_ABN__c.field-meta.xml
<CustomField>
    <fullName>Compass_Fertility_ABN__c</fullName>
    <formula>&quot;COMPASS ABN&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compass Fertility ABN</label>
    <type>Text</type>
</CustomField>