force-app/main/default/objects/Sperm_Sample__c/fields/Compass_Fertility_Address__c.field-meta.xml
<CustomField>
    <fullName>Compass_Fertility_Address__c</fullName>
    <formula>&quot;9/1 Sydney Ave, Forrest, ACT 2600 Australia&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compass Fertility Address</label>
    <type>Text</type>
</CustomField>