force-app/main/default/objects/Sperm_Sample__c/fields/Compass_Fertility_Name__c.field-meta.xml
<CustomField>
    <fullName>Compass_Fertility_Name__c</fullName>
    <formula>&quot;Compass Fertility&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compass Fertility Name</label>
    <type>Text</type>
</CustomField>