force-app/main/default/objects/Sperm_Sample__c/fields/Compass_Fertility_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Compass_Fertility_Phone_Number__c</fullName>
    <formula>&quot;(02) 6175 9000&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compass Fertility Phone Number</label>
    <type>Text</type>
</CustomField>