force-app/main/default/objects/Sperm_Sample__c/fields/Complete_Sample__c.field-meta.xml
<CustomField>
    <fullName>Complete_Sample__c</fullName>
    <label>Complete Sample</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>