force-app/main/default/objects/Sperm_Sample__c/fields/Concentration__c.field-meta.xml
<CustomField>
    <fullName>Concentration__c</fullName>
    <inlineHelpText>Numeral value</inlineHelpText>
    <label>Post Thaw Concentration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>