force-app/main/default/objects/Sperm_Sample__c/fields/Current_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Time__c</fullName>
    <formula>TIMEVALUE(DATETIMEVALUE(NOW()) + (10/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Time</label>
    <type>Time</type>
</CustomField>