force-app/main/default/objects/Sperm_Sample__c/fields/Debris__c.field-meta.xml
<CustomField>
    <fullName>Debris__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debris</label>
    <type>Checkbox</type>
</CustomField>