force-app/main/default/objects/Sperm_Sample__c/fields/Debris_As_Text__c.field-meta.xml
<CustomField>
    <fullName>Debris_As_Text__c</fullName>
    <formula>IF( Debris__c = TRUE,&quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debris As Text</label>
    <type>Text</type>
</CustomField>