force-app/main/default/objects/Sperm_Sample__c/fields/Difficulties_Producing__c.field-meta.xml
<CustomField>
    <fullName>Difficulties_Producing__c</fullName>
    <label>Difficulties Producing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>