force-app/main/default/objects/Sperm_Sample__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <formula>Donor_Owner__r.FirstName &amp; &quot; &quot; &amp; Donor_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Name</label>
    <type>Text</type>
</CustomField>