force-app/main/default/objects/Sperm_Sample__c/fields/Donor_Owner__c.field-meta.xml
<CustomField>
    <fullName>Donor_Owner__c</fullName>
    <label>Donor / Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Semen Samples</relationshipLabel>
    <relationshipName>Sperm_Samples</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>