force-app/main/default/objects/Sperm_Sample__c/fields/Donor_Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>Donor_Owner_Address__c</fullName>
    <formula>Donor_Owner__r.MailingStreet&amp;&quot;,&quot;&amp;&quot; &quot;&amp;Donor_Owner__r.MailingCity&amp;&quot; &quot;&amp;Donor_Owner__r.MailingState&amp;&quot; &quot;&amp;Donor_Owner__r.MailingPostalCode&amp;&quot;.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Owner Address</label>
    <type>Text</type>
</CustomField>