force-app/main/default/objects/Sperm_Sample__c/fields/Donor_Owner_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Donor_Owner_Email_Address__c</fullName>
    <formula>Donor_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Owner Email Address</label>
    <type>Text</type>
</CustomField>