force-app/main/default/objects/Sperm_Sample__c/fields/Donor_Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Owner_First_Name__c</fullName>
    <formula>Donor_Owner__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Owner First Name</label>
    <type>Text</type>
</CustomField>