force-app/main/default/objects/Sperm_Sample__c/fields/Donor_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Owner_Full_Name__c</fullName>
    <formula>Donor_Owner_First_Name__c&amp;&quot; &quot;&amp;Donor_Owner_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Owner Full Name</label>
    <type>Text</type>
</CustomField>