force-app/main/default/objects/Sperm_Sample__c/fields/Donor_Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Owner_Last_Name__c</fullName>
    <formula>Donor_Owner__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Owner Last Name</label>
    <type>Text</type>
</CustomField>