force-app/main/default/objects/Sperm_Sample__c/fields/Enterred_by_User_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Enterred_by_User_as_Text__c</fullName>
    <label>Enterred by User as Text</label>
    <length>60</length>
    <type>Text</type>
</CustomField>