force-app/main/default/objects/Sperm_Sample__c/fields/Freeze_Scientist_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Scientist_Picklist__c</fullName>
    <label>Freeze Scientist Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scientists</valueSetName>
    </valueSet>
</CustomField>