force-app/main/default/objects/Sperm_Sample__c/fields/Freeze_Witness__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Witness__c</fullName>
    <label>Freeze Witness</label>
    <length>10</length>
    <type>Text</type>
</CustomField>