force-app/main/default/objects/Sperm_Sample__c/fields/Frozen__c.field-meta.xml
<CustomField>
    <fullName>Frozen__c</fullName>
    <formula>IF(TEXT(Date_Frozen__c) = null, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frozen?</label>
    <type>Checkbox</type>
</CustomField>