force-app/main/default/objects/Sperm_Sample__c/fields/Household_Id__c.field-meta.xml
<CustomField>
    <fullName>Household_Id__c</fullName>
    <formula>Donor_Owner__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Id</label>
    <type>Text</type>
</CustomField>