force-app/main/default/objects/Sperm_Sample__c/fields/Non_Progressive__c.field-meta.xml
<CustomField>
    <fullName>Non_Progressive__c</fullName>
    <label>Non-Progressive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>