force-app/main/default/objects/Sperm_Sample__c/fields/Normal_Morphology__c.field-meta.xml
<CustomField>
    <fullName>Normal_Morphology__c</fullName>
    <label>Normal Morphology</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>