force-app/main/default/objects/Sperm_Sample__c/fields/Number_of_Straws_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Straws_Frozen__c</fullName>
    <label>Number of Straws Frozen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>