force-app/main/default/objects/Sperm_Sample__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <defaultValue>&quot;Compass&quot;</defaultValue>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>