force-app/main/default/objects/Sperm_Sample__c/fields/Origin_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Origin_Picklist__c</fullName>
    <label>Origin Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>Other Clinic</fullName>
                <label>Off Site</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>