force-app/main/default/objects/Sperm_Sample__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <formula>Donor_Owner__r.Partner_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>