force-app/main/default/objects/Sperm_Sample__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <formula>Donor_Owner__r.Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient ID</label>
    <type>Text</type>
</CustomField>