force-app/main/default/objects/Sperm_Sample__c/fields/Patient_Smokes__c.field-meta.xml
<CustomField>
    <fullName>Patient_Smokes__c</fullName>
    <label>Patient Smokes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>