force-app/main/default/objects/Sperm_Sample__c/fields/Post_Thaw_Non_Progressive_Motility__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Non_Progressive_Motility__c</fullName>
    <label>Post Thaw Non-Progressive Motility</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>