force-app/main/default/objects/Sperm_Sample__c/fields/Post_Thaw_Total_Motile_Count__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Total_Motile_Count__c</fullName>
    <formula>Straw_Size_Number__c * Concentration__c *  Post_Thaw_Total_Motility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Thaw Total Motile Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>