force-app/main/default/objects/Sperm_Sample__c/fields/Prep_Type__c.field-meta.xml
<CustomField>
    <fullName>Prep_Type__c</fullName>
    <label>Prep Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Swim up</fullName>
            </value>
            <value>
                <fullName>Wash Only</fullName>
            </value>
            <value>
                <fullName>Thaw and Insemination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>