force-app/main/default/objects/Sperm_Sample__c/fields/Produced_At__c.field-meta.xml
<CustomField>
    <fullName>Produced_At__c</fullName>
    <label>Produced At?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>