force-app/main/default/objects/Sperm_Sample__c/fields/Progressive_Motility__c.field-meta.xml
<CustomField>
    <fullName>Progressive_Motility__c</fullName>
    <label>Progressive Motility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>