force-app/main/default/objects/Sperm_Sample__c/fields/Recent_Drugs__c.field-meta.xml
<CustomField>
    <fullName>Recent_Drugs__c</fullName>
    <label>Recent Drugs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>