force-app/main/default/objects/Sperm_Sample__c/fields/Recent_Illnes__c.field-meta.xml
<CustomField>
    <fullName>Recent_Illnes__c</fullName>
    <label>Recent Illnes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>