force-app/main/default/objects/Sperm_Sample__c/fields/Recipient_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Picklist__c</fullName>
    <label>Recipient Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient and Doctor</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>