force-app/main/default/objects/Sperm_Sample__c/fields/Referring_Doctor_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor_Name_Text__c</fullName>
    <formula>Requesting_Dr__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Doctor Name Text</label>
    <type>Text</type>
</CustomField>