force-app/main/default/objects/Sperm_Sample__c/fields/Related_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Related_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Semen Samples</relationshipLabel>
    <relationshipName>Semen_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>