force-app/main/default/objects/Sperm_Sample__c/fields/Report_Generation_Time__c.field-meta.xml
<CustomField>
    <fullName>Report_Generation_Time__c</fullName>
    <label>Report Generation Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>