force-app/main/default/objects/Sperm_Sample__c/fields/Requesting_Doctor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Doctor_Email__c</fullName>
    <formula>Requesting_Dr__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting Doctor Email</label>
    <type>Text</type>
</CustomField>