force-app/main/default/objects/Sperm_Sample__c/fields/Requesting_Dr__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Dr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Dr</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Semen Samples</relationshipLabel>
    <relationshipName>Semen_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>