force-app/main/default/objects/Sperm_Sample__c/fields/Requesting_Dr_Address__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Dr_Address__c</fullName>
    <formula>Requesting_Dr__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting Dr Address</label>
    <type>Text</type>
</CustomField>