force-app/main/default/objects/Sperm_Sample__c/fields/Requesting_Dr_Phone__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Dr_Phone__c</fullName>
    <formula>Requesting_Dr__r.Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting Dr Phone</label>
    <type>Text</type>
</CustomField>