force-app/main/default/objects/Sperm_Sample__c/fields/Requesting_Dr_Provider_No__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Dr_Provider_No__c</fullName>
    <formula>Requesting_Dr__r.Provider_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting Dr Provider No.</label>
    <type>Text</type>
</CustomField>