force-app/main/default/objects/Sperm_Sample__c/fields/Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Result_Type__c</fullName>
    <label>Result Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Abnormal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>