force-app/main/default/objects/Sperm_Sample__c/fields/Sample_Age__c.field-meta.xml
<CustomField>
    <fullName>Sample_Age__c</fullName>
    <formula>LEFT(TEXT(( Analysis_Date_Time__c  -   Collection_Date_Time__c )*24*60),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Age</label>
    <type>Text</type>
</CustomField>