force-app/main/default/objects/Sperm_Sample__c/fields/Sample_for_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Sample_for_Freeze__c</fullName>
    <label>Sample for Freeze</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>