force-app/main/default/objects/Sperm_Sample__c/fields/Semen_Sample_Scientists__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample_Scientists__c</fullName>
    <label>Semen Sample Scientists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scientists</valueSetName>
    </valueSet>
</CustomField>