force-app/main/default/objects/Sperm_Sample__c/fields/Semen_Sample_Scientists_lookup__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample_Scientists_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semen Sample Scientists</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Semen_Samples2</relationshipName>
    <type>Lookup</type>
</CustomField>