force-app/main/default/objects/Sperm_Sample__c/fields/Sperm_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Concentration__c</fullName>
    <inlineHelpText>Metric measurement = million/mL</inlineHelpText>
    <label>Sperm Concentration</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>