force-app/main/default/objects/Sperm_Sample__c/fields/Sperm_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Consumed__c</fullName>
    <formula>Number_of_Straws_Remaining__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sperm Consumed</label>
    <type>Checkbox</type>
</CustomField>