force-app/main/default/objects/Sperm_Sample__c/fields/Sperm_Prep_Fresh_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Prep_Fresh_Frozen__c</fullName>
    <label>Sperm Prep Fresh Frozen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>