force-app/main/default/objects/Sperm_Sample__c/fields/Sperm_Source__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Source__c</fullName>
    <label>Sperm Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Known Donor</fullName>
            </value>
            <value>
                <fullName>Open ID Donor</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
                <isActive>false</isActive>
                <label>Relationship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>